add compile dependency

--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -23,5 +23,6 @@ android {
 }
 
 dependencies {
+    compileOnly 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
 }
