--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+ext {
+    PROJECT_VERSION = '1.0-SNAPSHOT'
+}
+
 buildscript {
 
     repositories {
