--- a/codec/build.gradle
+++ b/codec/build.gradle
@@ -1,27 +1,5 @@
-apply plugin: 'com.android.library'
+apply plugin: 'java-library'
 apply from: './maven.gradle'
 
-android {
-    compileSdkVersion 26
-
-
-
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-}
-
-dependencies {
-    testImplementation 'junit:junit:4.12'
-}
+sourceCompatibility = var.java.sourceCompatibility
+targetCompatibility = var.java.targetCompatibility
