use app as sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':logger', ':codec', ':security', ':sample', ':logger-android'
+include ':app', ':logger', ':codec', ':security', ':logger-android'
