优化maven自动发布项目到nexus仓库 优化使用配置文件的方式配置服务器信息 优化任务和发布配置到一个文件，单独的模块只需要配置模块名和描述

--- a/codec/build.gradle
+++ b/codec/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'java-library'
-apply from: './maven.gradle'
+apply plugin: 'maven-publish'
 
-sourceCompatibility = var.java.sourceCompatibility
-targetCompatibility = var.java.targetCompatibility
+// 配置参数
+ext {
+    maven_artifactId = 'hualuomoli-codec'
+}
+
+apply from: rootProject.file('maven-java.gradle')
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
